--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>
-      Complete Responsive Personal Portfolio Website HTML CSS Javascript |
-      Codehal
-    </title>
+    <title>AbeebDon Portfolio</title>
 
     <link rel="stylesheet" href="style.css" />
 
@@ -56,7 +53,7 @@
         <img src="./images/img1.jpg" alt="" />
       </div>
     </section>
-    <!-- about section design -->
+    <!-- About section design -->
 
     <section class="about" id="about">
       <div class="about-img">
@@ -75,7 +72,7 @@
         <a href="" class="btn">Read More</a>
       </div>
     </section>
-    <!-- education section design -->
+    <!-- Services section design -->
 
     <section class="services" id="services">
       <h2 class="heading">Our <span>Services</span></h2>
