Adding the portfolio section

--- a/index.html
+++ b/index.html
@@ -112,8 +112,61 @@
         </div>
       </div>
     </section>
-    <!-- skills section design -->
+    <!-- Portfolio section design -->
 
+    <section class="portfolio" id="portfolio">
+      <h2 class="heading">Latest <span>Project</span></h2>
+      <div class="portfolio-container">
+        <div class="portfolio-box">
+          <img src="./images/sushi.png" alt="" />
+          <div class="portfolio-layer">
+            <h4>Web Design</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa
+              asperiores nemo tempore iusto, deserunt quae. Corrupti obcaecati
+              laborum asperiores modi?
+            </p>
+            <a href="#"><i>bx bx-link-external</i></a>
+          </div>
+        </div>
+        <div class="portfolio-box">
+          <img src="./images/sushi.png" alt="" />
+          <div class="portfolio-layer">
+            <h4>Web Design</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa
+              asperiores nemo tempore iusto, deserunt quae. Corrupti obcaecati
+              laborum asperiores modi?
+            </p>
+            <a href="#"><i>bx bx-link-external</i></a>
+          </div>
+        </div>
+        <div class="portfolio-box">
+          <img src="./images/sushi.png" alt="" />
+          <div class="portfolio-layer">
+            <h4>Web Design</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa
+              asperiores nemo tempore iusto, deserunt quae. Corrupti obcaecati
+              laborum asperiores modi?
+            </p>
+            <a href="#"><i>bx bx-link-external</i></a>
+          </div>
+        </div>
+        <div class="portfolio-box">
+          <img src="./images/sushi.png" alt="" />
+          <div class="portfolio-layer">
+            <h4>Web Design</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa
+              asperiores nemo tempore iusto, deserunt quae. Corrupti obcaecati
+              laborum asperiores modi?
+            </p>
+            <a href="#"><i>bx bx-link-external</i></a>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- contact section design -->
 
     <!-- footer design -->
