--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
     <section class="portfolio" id="portfolio">
       <h2 class="heading">Latest <span>Project</span></h2>
       <div class="portfolio-container">
-        <div class="portfolio-box">
-          <img src="./images/sushi.png" alt="" />
+        <div class="portfoli-box">
+          <img src="./images/desktop-preview.jpg" alt="" />
           <div class="portfolio-layer">
             <h4>Web Design</h4>
             <p>
@@ -126,11 +126,11 @@
               asperiores nemo tempore iusto, deserunt quae. Corrupti obcaecati
               laborum asperiores modi?
             </p>
-            <a href="#"><i>bx bx-link-external</i></a>
+            <a href="#"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
-        <div class="portfolio-box">
-          <img src="./images/sushi.png" alt="" />
+        <div class="portfoli-box">
+          <img src="./images/desktop-preview.jpg" alt="" />
           <div class="portfolio-layer">
             <h4>Web Design</h4>
             <p>
@@ -138,11 +138,11 @@
               asperiores nemo tempore iusto, deserunt quae. Corrupti obcaecati
               laborum asperiores modi?
             </p>
-            <a href="#"><i>bx bx-link-external</i></a>
+            <a href="#"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
-        <div class="portfolio-box">
-          <img src="./images/sushi.png" alt="" />
+        <div class="portfoli-box">
+          <img src="./images/desktop-preview.jpg" alt="" />
           <div class="portfolio-layer">
             <h4>Web Design</h4>
             <p>
@@ -150,11 +150,11 @@
               asperiores nemo tempore iusto, deserunt quae. Corrupti obcaecati
               laborum asperiores modi?
             </p>
-            <a href="#"><i>bx bx-link-external</i></a>
+            <a href="#"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
-        <div class="portfolio-box">
-          <img src="./images/sushi.png" alt="" />
+        <div class="portfoli-box">
+          <img src="./images/desktop-preview.jpg" alt="" />
           <div class="portfolio-layer">
             <h4>Web Design</h4>
             <p>
@@ -162,13 +162,51 @@
               asperiores nemo tempore iusto, deserunt quae. Corrupti obcaecati
               laborum asperiores modi?
             </p>
-            <a href="#"><i>bx bx-link-external</i></a>
+            <a href="#"><i class="bx bx-link-external"></i></a>
+          </div>
+        </div>
+        <div class="portfoli-box">
+          <img src="./images/desktop-preview.jpg" alt="" />
+          <div class="portfolio-layer">
+            <h4>Web Design</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa
+              asperiores nemo tempore iusto, deserunt quae. Corrupti obcaecati
+              laborum asperiores modi?
+            </p>
+            <a href="#"><i class="bx bx-link-external"></i></a>
+          </div>
+        </div>
+        <div class="portfoli-box">
+          <img src="./images/desktop-preview.jpg" alt="" />
+          <div class="portfolio-layer">
+            <h4>Web Design</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa
+              asperiores nemo tempore iusto, deserunt quae. Corrupti obcaecati
+              laborum asperiores modi?
+            </p>
+            <a href="#"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
       </div>
     </section>
     <!-- contact section design -->
-
+    <section class="content" id="content">
+      <h2 class="heading">Contact <span>Me!</span></h2>
+      <form action="#">
+        <div class="input-box">
+          <input type="text" placeholder="Full Name" />
+          <input type="email" placeholder="Email Address" />
+        </div>
+        <div class="input-box">
+          <input type="number" placeholder="Mobile Number" />
+          <input type="text" placeholder="Email Subject" />
+        </div>
+        <textarea name="" id="" cols="30" rows="10">Your Message</textarea>
+        <input type="submit" value="Send Message" class="btn" />
+      </form>
+    </section>
     <!-- footer design -->
 
     <script type="module" src="app.js"></script>
