Adding the contact me and the footer with some js

--- a/index.html
+++ b/index.html
@@ -192,9 +192,9 @@
       </div>
     </section>
     <!-- contact section design -->
-    <section class="content" id="content">
+    <section class="contact" id="contact">
       <h2 class="heading">Contact <span>Me!</span></h2>
-      <form action="#">
+      <form action="#" class="contact-form">
         <div class="input-box">
           <input type="text" placeholder="Full Name" />
           <input type="email" placeholder="Email Address" />
@@ -207,7 +207,16 @@
         <input type="submit" value="Send Message" class="btn" />
       </form>
     </section>
+
     <!-- footer design -->
+    <footer class="footer" id="footer">
+      <div class="footer-text">
+        <p>copyright &copy; 2023 by <span> Abeebon</span> All right reserved</p>
+      </div>
+      <div class="footer-iconTop">
+        <a href="#home"> <i class="bx bx-up-arrow-alt"></i></a>
+      </div>
+    </footer>
 
     <script type="module" src="app.js"></script>
     <script src="js/script.js"></script>
