--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <a href=""><i class="bx bx1-linkedin"></i></a>
           <a href=""><i class="bx bx1-instagram-alt"></i></a>
         </div>
-        <a href="£" class="btn">Download CV</a>
+        <a href="#" class="btn">Download CV</a>
       </div>
       <div class="home-img">
         <img src="./images/img1.jpg" alt="" />
@@ -219,6 +219,5 @@
     </footer>
 
     <script type="module" src="app.js"></script>
-    <script src="js/script.js"></script>
   </body>
 </html>
