--- a/index.html
+++ b/index.html
@@ -218,6 +218,8 @@
       </div>
     </footer>
 
+    <!-- scroll reveal -->
+    <script src="https://unpkg.com/scrollreveal"></script>
     <script type="module" src="app.js"></script>
   </body>
 </html>
