--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
         <h1>Abeeb Maroof</h1>
         <h3>And I am a <span>Frontend Developer</span></h3>
         <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint eum
-          architecto soluta! Expedita possimus doloribus, sed cor
+          High level experience in creating responsive web pages with great user
+          interfaces and user experience
         </p>
         <div class="social-media">
-          <a href=""><i class="bx bx1-facebook"></i></a>
-          <a href=""><i class="bx bx1-twitter"></i></a>
-          <a href=""><i class="bx bx1-linkedin"></i></a>
-          <a href=""><i class="bx bx1-instagram-alt"></i></a>
+          <a href=""><i class="bx bxl-facebook"></i></a>
+          <a href=""><i class="bx bxl-twitter"></i></a>
+          <a href=""><i class="bx bxl-linkedin"></i></a>
+          <a href=""><i class="bx bxl-instagram-alt"></i></a>
         </div>
         <a href="#" class="btn">Download CV</a>
       </div>
