Adding the recent projects

--- a/index.html
+++ b/index.html
@@ -118,74 +118,49 @@
       <h2 class="heading">Latest <span>Project</span></h2>
       <div class="portfolio-container">
         <div class="portfoli-box">
-          <img src="./images/desktop-preview.jpg" alt="" />
+          <img src="./images/desktop.jpg" alt="" />
           <div class="portfolio-layer">
             <h4>Web Design</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa
-              asperiores nemo tempore iusto, deserunt quae. Corrupti obcaecati
-              laborum asperiores modi?
-            </p>
+            <p>Fylo Landing Page</p>
             <a href="#"><i class="bx bx-link-external"></i></a>
+          </div>
+        </div>
+
+        <div class="portfoli-box">
+          <img src="./images/Majestic Sushi.png" alt="" />
+          <div class="portfolio-layer">
+            <h4>Web Design</h4>
+            <p>A three web pages for a restaurant</p>
+            <a href="https://majestic-sushi.netlify.app" target="_blank"
+              ><i class="bx bx-link-external"></i
+            ></a>
           </div>
         </div>
         <div class="portfoli-box">
           <img src="./images/desktop-preview.jpg" alt="" />
           <div class="portfolio-layer">
             <h4>Web Design</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa
-              asperiores nemo tempore iusto, deserunt quae. Corrupti obcaecati
-              laborum asperiores modi?
-            </p>
-            <a href="#"><i class="bx bx-link-external"></i></a>
+            <p>A project from frontend mentor</p>
+            <a href="https://abeebdonfemp.netlify.app" target="_blank"
+              ><i class="bx bx-link-external"></i
+            ></a>
           </div>
         </div>
         <div class="portfoli-box">
-          <img src="./images/desktop-preview.jpg" alt="" />
+          <img src="./images/odin.jpg" height="420px" />
           <div class="portfolio-layer">
             <h4>Web Design</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa
-              asperiores nemo tempore iusto, deserunt quae. Corrupti obcaecati
-              laborum asperiores modi?
-            </p>
-            <a href="#"><i class="bx bx-link-external"></i></a>
+            <p>A dummy of ODIN sign up Page</p>
+            <a href="https://abeebdonodinproject.netlify.app"
+              ><i class="bx bx-link-external"></i
+            ></a>
           </div>
         </div>
         <div class="portfoli-box">
-          <img src="./images/desktop-preview.jpg" alt="" />
+          <img src="./images/download.png" alt="" />
           <div class="portfolio-layer">
             <h4>Web Design</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa
-              asperiores nemo tempore iusto, deserunt quae. Corrupti obcaecati
-              laborum asperiores modi?
-            </p>
-            <a href="#"><i class="bx bx-link-external"></i></a>
-          </div>
-        </div>
-        <div class="portfoli-box">
-          <img src="./images/desktop-preview.jpg" alt="" />
-          <div class="portfolio-layer">
-            <h4>Web Design</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa
-              asperiores nemo tempore iusto, deserunt quae. Corrupti obcaecati
-              laborum asperiores modi?
-            </p>
-            <a href="#"><i class="bx bx-link-external"></i></a>
-          </div>
-        </div>
-        <div class="portfoli-box">
-          <img src="./images/desktop-preview.jpg" alt="" />
-          <div class="portfolio-layer">
-            <h4>Web Design</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa
-              asperiores nemo tempore iusto, deserunt quae. Corrupti obcaecati
-              laborum asperiores modi?
-            </p>
+            <p>A dummy of facebook menu page</p>
             <a href="#"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
