--- a/index.html
+++ b/index.html
@@ -74,14 +74,17 @@
             <i class="bx bx-x" id="about-icon" onclick="cancel()"></i>
           </div>
           <p>
-            I am a highly skilled and experienced
-            <span>FRONTEND DEVELOPER</span> with expertise in Javascript, HTML
-            and CSS.
+            My name is Abeeb Maroof Olumide and I am a highly skilled and
+            experienced
+            <span>FRONTEND DEVELOPER</span> with expertise in Javascript, HTML,
+            Bootstrap and CSS.
           </p>
 
-          <p>I work well with others and find it exciting to work in a team.</p>
-          A strong communicator with a passion for building user-friendly and
-          interactive interfaces and solving complex problems.
+          <p>
+            I work well with others and find it exciting to work in a team. A
+            strong communicator with a passion for building user-friendly and
+            interactive interfaces and solving complex problems.
+          </p>
           <p>
             I am a creative and strategic thinker with a proven track record of
             delivering innovative solutions and exceeding client expectations.
@@ -107,7 +110,7 @@
         </div>
         <div class="service-box">
           <i class="bx bx-cod-alt">
-            <h3>Graphic Design</h3>
+            <h3>Web Design</h3>
             <p>
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi
               vitae inventore consequuntur modi earum laborum provident saepe
@@ -118,7 +121,7 @@
         </div>
         <div class="service-box">
           <i class="bx bx-cod-alt">
-            <h3>Digital Marketing</h3>
+            <h3>Web Hosting</h3>
             <p>
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi
               vitae inventore consequuntur modi earum laborum provident saepe
