--- a/skill.html
+++ b/skill.html
@@ -2,57 +2,35 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AbeebDon Portfolio</title>
-
+    <title>My Skills</title>
     <link rel="stylesheet" href="style.css" />
-
     <!-- box icons -->
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
   </head>
-
   <body>
-    <!-- header design -->
-
     <header class="header">
-      <a href="#" class="logo">Abeeb<span>don</span></a>
+      <a href="#" class="logo">Abeebdon</a>
 
       <i class="bx bx-menu" id="menu-icon"></i>
       <nav class="navbar">
-        <a href="#home" class="active">Home</a>
+        <a href="index.html">Home</a>
         <a href="about.html">About</a>
-        <a href="skill.html">My Skills</a>
+        <a href="skill.html" class="active">My Skills</a>
         <a href="projects.html">Projects</a>
       </nav>
     </header>
-
-    <!-- home section design -->
-    <section class="home" id="home">
-      <div class="home-content">
-        <h3>Hello it's Me</h3>
-        <h1>Abeeb Maroof</h1>
-        <h3>And I am a <span>Frontend Developer</span></h3>
-        <p>
-          High level experience in creating responsive web pages with great user
-          interfaces and user experience
-        </p>
-
-        <a href="#" class="btn">Download CV</a>
-      </div>
-    </section>
-    <!-- About section design -->
-
-    <!-- Services section design -->
-
-    <!-- footer design -->
+    <div class="container">
+      <p>My Skills</p>
+    </div>
     <footer class="footer" id="footer">
       <div class="footer-text">
         <p>copyright &copy; 2023 by <span> Abeebon</span> All right reserved</p>
       </div>
+
       <div class="social-media">
         <a href=""><i class="bx bxl-facebook"></i></a>
         <a href=""><i class="bx bxl-twitter"></i></a>
@@ -60,7 +38,6 @@
         <a href=""><i class="bx bxl-instagram-alt"></i></a>
       </div>
     </footer>
-
-    <script type="module" src="app.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
