--- a/about.html
+++ b/about.html
@@ -2,10 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AbeebDon Portfolio</title>
-
+    <title>About Me</title>
     <link rel="stylesheet" href="style.css" />
 
     <!-- box icons -->
@@ -14,41 +12,32 @@
       rel="stylesheet"
     />
   </head>
-
   <body>
-    <!-- header design -->
-
     <header class="header">
       <a href="#" class="logo">Abeeb<span>don</span></a>
 
       <i class="bx bx-menu" id="menu-icon"></i>
       <nav class="navbar">
-        <a href="#home" class="active">Home</a>
-        <a href="about.html">About</a>
+        <a href="index.html">Home</a>
+        <a href="about.html" class="active">About</a>
         <a href="skill.html">My Skills</a>
         <a href="projects.html">Projects</a>
       </nav>
     </header>
-
-    <!-- home section design -->
-    <section class="home" id="home">
-      <div class="home-content">
-        <h3>Hello it's Me</h3>
-        <h1>Abeeb Maroof</h1>
-        <h3>And I am a <span>Frontend Developer</span></h3>
-        <p>
-          High level experience in creating responsive web pages with great user
-          interfaces and user experience
-        </p>
-
-        <a href="#" class="btn">Download CV</a>
-      </div>
-    </section>
-    <!-- About section design -->
-
-    <!-- Services section design -->
-
-    <!-- footer design -->
+    <div class="container">
+      <section class="about" id="about">
+        <div class="about-content">
+          <h2 class="heading">About <span>ME</span></h2>
+          <h3>Frontend Developer</h3>
+          <p>
+            I am a highly skilled and experienced
+            <span> frontend developer</span> with expertise in Javascript, HTMl
+            and CSS.
+          </p>
+          <a href="#" id="more" class="btn">Read More</a>
+        </div>
+      </section>
+    </div>
     <footer class="footer" id="footer">
       <div class="footer-text">
         <p>copyright &copy; 2023 by <span> Abeebon</span> All right reserved</p>
@@ -61,6 +50,6 @@
       </div>
     </footer>
 
-    <script type="module" src="app.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
